# baseProject

./: .gitignore  README.md  build.gradle  build.gradle.kts  clearBuild.bat  config.gradle  config.gradle.kts  config_component.gradle  configs_module_common.gradle  configs_signing.gradle  dokit.gradle  gradle.properties  log.txt  settings.gradle  settings.gradle.kts  开发规范  新建一个module步骤
app/: .gitignore  build.gradle  build.gradle.kts  configs_signing.gradle  proguard-rules.pro  upLoadPgy.gradle  说明
app/beta/: output-metadata.json
app/jks_info/: base.jks  jks_info.txt  likun.jks
app/jni_mode/: build.gradle
app/jni_mode/jni/: CMakeLists.txt
app/release/: output.json
app/src/main/: AndroidManifest.xml
component_common/: build.gradle  build.gradle.kts  proguard-rules.pro  说明
component_common/src/main/: AndroidManifest.xml
component_core/: build.gradle  build.gradle.kts  proguard-rules.pro  说明
component_core/src/main/: AndroidManifest.xml
component_core/src/main/jni/: CMakeLists.txt
component_core/src/main/jni/cpp/: test.cpp
gradle/wrapper/: gradle-wrapper.properties
libarouter/: build.gradle
libarouter/src/main/: AndroidManifest.xml
libcore/: build.gradle
libcore/src/main/: AndroidManifest.xml
module_login/: build.gradle  build.gradle.kts  proguard-rules.pro  说明
module_login/src/main/: AndroidManifest.xml
module_main/: build.gradle  build.gradle.kts  proguard-rules.pro  说明
module_other/: build.gradle  build.gradle.kts  说明
module_user/: build.gradle  build.gradle.kts  说明
module_备份/: build.gradle  proguard-rules.pro  说明
(+657 files in other folders)
